--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Val Mack</title>
-	<link rel="stylesheet" href="style.css?v=1" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="script.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="css/main.css?v=1" type="text/css">
+	<link rel="stylesheet" href="css/semantic.min.css?v=1" type="text/css">
+	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="js/semantic.min.js" type="text/javascript"></script>
+	<script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="left-box">
-		<section id="section1">
+
+	<div class="ui text container vertical segment">
+
+    <!-- <div class="ui segment">
+      <section id="section1">
 			<h1>Val</h1>
 			<h2>Denay</h2>
 			<h1>Mack</h1>
@@ -21,21 +26,173 @@
 		<section id="section3">
 			Links
 		</section>
+    </div>
+  </div> -->
+
+<!-- <div class="ui borderless vertical menu">
+  <a class="item active disabled">
+    <h1 class="ui header">Val</h1>
+    <h2>Denay</h2>
+    <h1>Mack</h1>
+  </a>
+  <a class="item disabled">
+    <h4 class="ui header">Contact</h4>
+    <p>Check out our collection of coupons</p>
+  </a>
+  <a class="item disabled">
+    <h4 class="ui header">Links</h4>
+    <p>Visit our rebate forum for information on claiming rebates</p>
+  </a>
+</div> -->
+
+<div class="ui top attached demo menu">
+  <a class="item">
+    <i class="sidebar icon"></i>
+    About
+  </a>
+  <span class="header">Valerie Denay Mack</span>
+</div>
+<div class="ui bottom attached segment pushable">
+  <div class="ui inverted labeled icon left inline vertical sidebar menu">
+    <a class="item">
+      <i class="home icon"></i>
+      Home
+    </a>
+    <a class="item">
+      <i class="block layout icon"></i>
+      Topics
+    </a>
+    <a class="item">
+      <i class="smile icon"></i>
+      Friends
+    </a>
+    <a class="item">
+      <i class="calendar icon"></i>
+      History
+    </a>
+  </div>
+
+<div class="pusher">
+
+	<div class="ui basic segment">
+		<h4 class="ui horizontal divider header">
+  Projects
+  <!-- <i class="tag icon"></i> -->
+</h4>
+
+<div class="ui link cards">
+
+  <div class="card">
+    <a class="image" href="#">
+  		<img src="images/covers/clonecombat-cover.png">
+  	</a>
+  	<div class="content">
+  		<a class="header" href="#">Clone Combat</a>
+  		<div class="meta">
+  			<span class="date">Fall 2015</span>
+  		</div>
+  		<div class="description">
+  			Designed UI for Clone Combat. 3.5 ranking on Newgrounds.
+  		</div>
+  	</div>
+  	<div class="extra content">
+      <span class="right floated">
+        <a href="http://www.newgrounds.com/portal/view/666197">Play on Newgrounds</a>
+      </span>
+    </div>
+  </div>
+
+  <div class="card">
+    <a class="image" href="#">
+      <img src="images/covers/aoh-cover.png">
+    </a>
+    <div class="content">
+      <a class="header">Mechanical Dreams</a>
+      <div class="meta">
+      	<span class="date">Summer 2015</span>
+      </div>
+      <div class="description">
+  			UI design.
+  		</div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="image">
+      <img src="images/covers/gix-cover.png">
+    </div>
+    <div class="content">
+      <div class="header">Gix Science</div>
+      <div class="meta">
+        <a>UI for github style ipython research management.</a>
+      </div>
+    </div>
+    <div class="extra content">
+      <span class="right floated">
+        Spring 2015
+      </span>
+    </div>
+  </div>
+
+  <div class="card">
+    <a class="image" href="#">
+      <img src="images/covers/belle-cover.png">
+    </a>
+    <div class="content">
+      <a class="header">Belle Apps Delivery</a>
+      <div class="meta">
+        <span class="date">Fall 2014</span>
+      </div>
+      <div class="description">Front-end web design.</div>
+    </div>
+    <div class="extra content">
+      <span class="right floated">
+        <a href="http://www.belledelivery.com">belledelivery.com</a>
+      </span>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="image">
+      <img src="images/covers/jesture-cover.gif">
+    </div>
+    <div class="content">
+      <div class="header">Jesture</div>
+      <div class="meta">
+        <a>Mobile app UI/UX design.</a>
+      </div>
+    </div>
+    <div class="extra content">
+      <span class="right floated">
+        Fall 2014
+      </span>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="image">
+      <img src="images/covers/augmate-cover.png">
+    </div>
+    <div class="content">
+      <div class="header">Augmate</div>
+      <div class="meta">
+        <a>AR design for Google Glass.</a>
+      </div>
+    </div>
+    <div class="extra content">
+      <span class="right floated">
+        Summer 2014
+      </span>
+    </div>
+  </div>
+
+</div>
+
 	</div>
 
-	<div class="partition">
-		Projects
-		<?php include 'includes/projects.php';?>
-	</div>
+</div>
 
-	<div class="partition">
-		Skills
-		<?php include 'includes/skills.php';?>
-	</div>
 
-	<div class="partition">
-		Resume
-		<?php include 'includes/resume.php';?>
-	</div>
+</div>
 </body>
 </html>
