changed jesture gif to png image

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
   <div class="card">
     <div class="image">
-      <img src="images/covers/jesture-cover.gif">
+      <img src="images/covers/jesture-cover.png">
     </div>
     <div class="content">
       <div class="header">Jesture</div>
