--- a/index.html
+++ b/index.html
@@ -6,77 +6,49 @@
 	<title>Val Mack</title>
 	<link rel="stylesheet" href="css/main.css?v=1" type="text/css">
 	<link rel="stylesheet" href="css/semantic.min.css?v=1" type="text/css">
+
+  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+
+  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+  <script src="semantic/dist/semantic.min.js"></script>
+
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="js/semantic.min.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
-
-	<div class="ui text container vertical segment">
-
-    <!-- <div class="ui segment">
-      <section id="section1">
-			<h1>Val</h1>
-			<h2>Denay</h2>
-			<h1>Mack</h1>
-		</section>
-		<section id="section2">
-			Contact
-		</section>
-		<section id="section3">
-			Links
-		</section>
+  <header>
+    <button class="massive circular ui icon black button">
+      <i class="icon settings"></i>
+    </button>
+    <div id="abvFld" class="ui vertical masthead center aligned segment">
+      <!-- MENU -->
+      <div class="ui container" id="menu">
+        <div class="ui secondary pointing menu">
+          <a href="#projects" class="active item">
+            Projects
+          </a>
+          <a href="#designs" class="item">
+            Graphic Designs
+          </a>
+          <div class="ui inverted pink right menu">
+            <a class="item">
+              <i class="mail icon"></i>
+              Contact
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="ui text container">
+        <h1 class="ui header">Valerie Denay Mack</h1>
+      </div>
     </div>
-  </div> -->
-
-<!-- <div class="ui borderless vertical menu">
-  <a class="item active disabled">
-    <h1 class="ui header">Val</h1>
-    <h2>Denay</h2>
-    <h1>Mack</h1>
-  </a>
-  <a class="item disabled">
-    <h4 class="ui header">Contact</h4>
-    <p>Check out our collection of coupons</p>
-  </a>
-  <a class="item disabled">
-    <h4 class="ui header">Links</h4>
-    <p>Visit our rebate forum for information on claiming rebates</p>
-  </a>
-</div> -->
-
-<div class="ui top attached demo menu">
-  <a class="item">
-    <i class="sidebar icon"></i>
-    About
-  </a>
-  <span class="header">Valerie Denay Mack</span>
-</div>
-<div class="ui bottom attached segment pushable">
-  <div class="ui inverted labeled icon left inline vertical sidebar menu">
-    <a class="item">
-      <i class="home icon"></i>
-      Home
-    </a>
-    <a class="item">
-      <i class="block layout icon"></i>
-      Topics
-    </a>
-    <a class="item">
-      <i class="smile icon"></i>
-      Friends
-    </a>
-    <a class="item">
-      <i class="calendar icon"></i>
-      History
-    </a>
-  </div>
-
-<div class="pusher">
+    <img id="hdrImg" src="images/header.png" alt="Pixel Perfect" />
+  </header>
 
 	<div class="ui basic segment">
 		<h4 class="ui horizontal divider header">
-  Projects
+  <a name="projects">Projects</a>
   <!-- <i class="tag icon"></i> -->
 </h4>
 
@@ -188,11 +160,15 @@
 
 </div>
 
-	</div>
+<h4 class="ui horizontal divider header">
+  <a name="designs">Designs</a>
+  <!-- <i class="tag icon"></i> -->
+</h4>
 
 </div>
 
 
-</div>
+
+
 </body>
 </html>
