--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- MENU -->
       <div class="ui container">
 
-        <div class="ui secondary pointing menu">
+        <div class="ui secondary pointing menu" id="menu">
           <p class="item">JUMP TO:</p>
           <a href="#projects" class="active item">
             Projects
@@ -37,23 +37,32 @@
         </div>
 
         <div class="ui masthead basic segment">
+          Hi. My name is Val. I love finding problems and fixing them with elegant solutions. This is why I am a leader and a designer. I care about user experiences. I am great at discovering needs and painpoints, mediating conflicts, generating and communicating ideas, and integrating a variety of tools or subject areas. I love to design for viable use cases with empathy and informed understanding.
+
+          My adaptability allows me to be an asset in any position and take ownership of my role.
+
+          Skills: (design) (coding) (misc: watchmaking, bartending, athletics, backgammon)
+
+          I am not afraid of risk or uncertainty, and I always go the extra mile.
         </div>
 
       </div>
 
       <!-- mobile -->
-      <button id="bttn" class="sticky massive circular ui icon black button">
+      <div class="ui basic segment">
+      <button id="bttn" class="massive circular ui icon black button">
       <i class="list icon"></i>
     </button>
+  </div>
 
     <!-- <img id="hdrImg" src="images/header.png" alt="Pixel Perfect" /> -->
 
 
 <div class="ui grid container" id="container">
 
-  <div class="three wide column">
+  <div class="three wide column" id="leftSide">
     <div class="ui basic sticky segment" id="sdBr">
-      <h1>VAL</h1>
+      <h1>Valerie</h1>
       <h1>Denay</h1>
       <h1>Mack</h1>
     </div>
@@ -73,7 +82,7 @@
 
 <!-- CARDS -->
 
-<div class="ui three stackable special cards">
+<div class="ui two stackable special cards">
 
    <div class="card">
     <div class="blurring dimmable image">
@@ -217,6 +226,7 @@
   </div>
   <div class="column">
     <img class="ui medium image" src="images/duvv.png">
+
     <img class="ui medium image" src="images/ccp.png">
 
   </div>
