Modal for designs via jscript

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Projects
           </a>
           <a href="#designs" class="active item">
-            Graphic Designs
+            Designs
           </a>
           <div class="right menu">
             <a class="item">
@@ -73,11 +73,11 @@
 <div class="thirteen wide column" id="mnCntnt">
 
 
-<div class="ui basic segment">
+<div name="projects" class="ui basic segment">
 
   <!-- divider -->
   <h3 class="ui horizontal hidden divider">
-    <p name="projects">Projects</p>
+    <p>Featured Projects</p>
   </h3>
 
 <!-- CARDS -->
@@ -206,29 +206,58 @@
 <!-- segment -->
 </div>
 
-<div class="ui basic segment">
+<div name="designs" class="ui basic segment">
 
 <h3 class="ui horizontal hidden divider">
-    <p name="designs">Designs</p>
+    <p>Graphic Designs</p>
   </h3>
 
 <!-- divider -->
 
 <div class="ui equal width stackable grid">
   <div class="column">
-    <img class="ui medium image" src="images/dino1.png">
+    <img class="ui medium image" src="images/dino1.png" alt="Dino 1">
     <img class="ui medium image" src="images/dino4.png">
+    <img class="ui medium image" src="images/julieskitchen.png" alt="Logo design for seasonal kitchen">
+    <img class="ui medium image" src="images/condom.png" alt="Condom design for ONE">
+    <img class="ui medium image" src="images/balch.png">
+    <img class="ui medium image" src="images/hotelapp.png">
   </div>
   <div class="column">
     <img class="ui medium image" src="images/dino2.png">
     <img class="ui medium image" src="images/dino3.png">
     <img class="ui medium image" src="images/bevclub.png">
+    <img class="ui medium image" src="images/ccp-puzzle.png">
+    <img class="ui medium image" src="images/soundspace.png">
   </div>
   <div class="column">
     <img class="ui medium image" src="images/duvv.png">
-
     <img class="ui medium image" src="images/ccp.png">
 
+  </div>
+</div>
+
+<!-- <div id="modal-jk" class="ui modal">
+  <div id="modalHeader" class="header">
+    Logo design for seasonal bakery
+    <button class="ui circular basic right floated icon button">
+  <i class="close icon"></i>
+</button>
+  </div>
+  <div class="content">
+      <img id="modalImage" class="image mod" src="images/julieskitchen.png">
+  </div>
+</div> -->
+
+<div class="ui small modal">
+  <div class="header">
+    <button id="closeButton" class="ui circular basic right floated icon button">
+  <i class="close icon"></i>
+</button>
+    <p id="modalHeader">Hello?</p>
+  </div>
+  <div class="content">
+      <img id="modalImage" class="image mod" src="images/julieskitchen.png">
   </div>
 </div>
 
