Mobile nav button sticky

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 	<script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
+
   <div id="hdrImg">
     <img class="disabled ui centered image" src="images/header.png">
   </div>
+
 
       <!-- ABOUT -->
 
@@ -41,6 +43,7 @@
         </div> -->
 
         <div id="precontainer" class="ui container">
+
         <div class="ui masthead basic segment">
           <div class="ui sizer vertical segment">
           <p>Hi. My name is </p>
@@ -59,16 +62,6 @@
 
       </div>
 
-      <!-- mobile -->
-      <div class="ui basic segment">
-      <button id="bttn" class="massive circular ui icon black button">
-      <i class="list icon"></i>
-    </button>
-  </div>
-
-    <!-- <img id="hdrImg" src="images/header.png" alt="Pixel Perfect" /> -->
-
-
 <div class="ui grid container" id="container">
 
   <div class="three wide column" id="leftSide">
@@ -82,6 +75,13 @@
 
 <!-- MAIN CONTENT -->
 <div class="thirteen wide column" id="mnCntnt">
+
+    <!-- mobile -->
+      <div class="ui basic sticky segment">
+      <button id="bttn" class="massive circular ui icon black button">
+      <i class="list icon"></i>
+    </button>
+  </div>
 
 
 <div name="projects" class="ui basic segment">
