Mobile nav button fixed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <img class="disabled ui centered image" src="images/header.png">
   </div>
 
+              <!-- mobile -->
+      <div class="ui basic segment">
+      <button id="bttn" class="massive circular ui icon black button">
+      <i class="list icon"></i>
+    </button>
+  </div>
 
       <!-- ABOUT -->
 
@@ -62,17 +68,11 @@
 
       </div>
 
-            <!-- mobile -->
-      <div class="ui basic sticky segment">
-      <button id="bttn" class="massive circular ui icon black button">
-      <i class="list icon"></i>
-    </button>
-  </div>
-
 <div class="ui grid container" id="container">
 
 
   <div class="three wide column" id="leftSide">
+
     <div class="ui basic sticky segment" id="sdBr">
       <h1>Valerie</h1>
       <h1>Denay</h1>
