--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 	<script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
-
   <div id="hdrImg">
-    <img class="disabled ui centered image" src="images/header.png">
+    <img class="ui centered image" src="images/header.png">
   </div>
 
               <!-- mobile -->
@@ -50,8 +49,8 @@
 
         <div id="precontainer" class="ui container">
 
-        <div class="ui masthead basic segment">
-          <div class="ui sizer vertical segment">
+        <div class="ui inverted masthead basic segment">
+          <div class="ui inverted sizer vertical basic segment">
           <p>Hi. My name is </p>
           <div class="ui huge header">Valerie Denay Mack</div>
           <p>
