--- a/index.html
+++ b/index.html
@@ -12,48 +12,31 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <script src="semantic/dist/semantic.min.js"></script>
 
-	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="js/semantic.min.js" type="text/javascript"></script>
+  <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="js/semantic.min.js" type="text/javascript"></script>
   <script src="js/background-blur.min.js"></script>
-	<script src="js/script.js" type="text/javascript"></script>
+  <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="hdrImg">
     <img class="ui centered image" src="images/header.png">
   </div>
 
-              <!-- mobile -->
-      <div class="ui basic segment">
-      <button id="bttn" class="massive circular ui icon black button">
+  <!-- mobile -->
+  <div class="ui basic segment">
+    <button id="bttn" class="massive circular ui icon black button">
       <i class="list icon"></i>
     </button>
   </div>
 
-      <!-- ABOUT -->
+  <!-- ABOUT -->
+  <div id="precontainer" class="ui container">
 
-    <!-- <div class="ui secondary pointing menu" id="menu">
-          <p class="item">JUMP TO:</p>
-          <a href="#projects" class="active item">
-            Projects
-          </a>
-          <a href="#designs" class="active item">
-            Designs
-          </a>
-          <div class="right menu">
-            <a class="item">
-              <i class="mail icon"></i>
-              Contact
-            </a>
-          </div>
-        </div> -->
-
-        <div id="precontainer" class="ui container">
-
-        <div class="ui inverted masthead basic segment">
-          <div class="ui inverted sizer vertical basic segment">
-          <p>Hi. My name is </p>
-          <div class="ui huge header">Valerie Denay Mack</div>
-          <p>
+    <div id="about" class="ui masthead basic inverted segment">
+      <div class="ui sizer vertical basic inverted segment">
+        <div class="ui centered header">My name is</div>
+        <div class="ui huge centered header">Valerie Denay Mack</div>
+        <p>
           I love finding problems and fixing them with elegant solutions. This is why I am a leader and a designer. I care about user experiences. I am great at discovering needs and painpoints, mediating conflicts, generating and communicating ideas, and integrating a variety of tools or subject areas. I love to design for viable use cases with empathy and informed understanding.
 
           My adaptability allows me to be an asset in any position and take ownership of my role.
@@ -62,188 +45,233 @@
 
           I am not afraid of risk or uncertainty, and I always go the extra mile.
         </p>
-        </div>
-        </div>
-
       </div>
-
-<div class="ui grid container" id="container">
-
-
-  <div class="three wide column" id="leftSide">
-
-    <div class="ui basic sticky segment" id="sdBr">
-      <h1>Valerie</h1>
-      <h1>Denay</h1>
-      <h1>Mack</h1>
     </div>
-
+    <!-- precontainer -->
   </div>
 
+  <div class="ui grid container" id="container">
+    <!-- container -->
 
-<!-- MAIN CONTENT -->
-<div class="thirteen wide column" id="mnCntnt">
-
-<div name="projects" class="ui basic segment">
-
-  <!-- divider -->
-  <h3 class="ui horizontal hidden divider">
-    <p>Featured Projects</p>
-  </h3>
-
-<!-- CARDS -->
-
-<div class="ui two stackable special cards">
-
-   <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui inverted button">Play on Newgrounds</div>
-        <div class="description">
-          Designed UI for Clone Combat. 3.5 ranking on Newgrounds.
+    <div class="three wide column" id="leftSide">
+      <div class="ui basic sticky segment" id="sdBr">
+        <h1>Valerie</h1>
+        <h1>Denay</h1>
+        <h1>Mack</h1>
+        <p> Strategist, Leader, Designer</p>
+        <p>BA Information Science</p>
+        <p>Business Minor
+          Cornell 2016</p>
+          <div>Contact links</div>
+          <div>Resume button</div>
         </div>
+      </div>
+
+      <!-- MAIN CONTENT -->
+      <div class="thirteen wide column" id="mnCntnt">
+        <div id="FUCKWIT" name="projects" class="ui basic segment">
+
+          <!-- divider -->
+          <h3 class="ui divider horizontal hidden">
+            <p>Featured Projects</p>
+          </h3>
+          <!-- CARDS -->
+          <div class="ui one special cards">
+
+            <a href="#projects" class="ui fluid card" id="clonecard">
+              <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <div class="ui inverted button">Play on Newgrounds</div>
+                      <div class="description">
+                        Designed UI for Clone Combat. 3.5 ranking on Newgrounds.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <img src="images/covers/clonecombat-cover.png">
+              </div>
+            </a>
+
+            <div id="clonecard1" class="hider ui segment">
+              <a class='item allpjcts'><button class='circular teal ui icon button'><i class='icon left chevron'></i></button></a>
+
+              <h2 class="header">Clone Combat</h2>
+              <img class="ui medium right floated image" src="images/samples/level22.png" alt="Kongregate Level 22">
+              <p>
+                Clone Combat is a game that my team and I created for our Analytics-Driven Game Design class.
+
+                I came up with the concept for this puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time. We successfully executed our ideas, creating three iterative versions that improved over time.
+              </p>
+              <img class="ui medium right floated image" src="images/samples/engagement.png" alt="Burndown Chart">
+              <p>
+                My primary roles were user interface and user experience designer.
+              </p>
+              <p>Our data analysis showed that our greatest design challenge was learnability, so I created comprehensive tutorial levels to increase player engagement.</p>
+              <img class="ui medium right floated image" src="images/samples/tutoriallevel.png" alt="Conduction Tutorial Level">
+              <p>Clone Combat was one of the most successful games produced from our class. It was featured on Newgrounds and received a 3.5 / 5 rating and over 20,000 plays in the first week. With a tougher audience on Kongregate, we received a 3.1 / 5 star rating.</p>
+              <img class="ui medium right floated image" src="images/samples/newgrounds.png" alt="Newgrounds Results">
+
+              <span class="left floated">
+                <a href="http://www.newgrounds.com/portal/view/666197">Play on Newgrounds</a>
+              </span> |
+              <span class="left floated"><a href="http://www.kongregate.com/games/maxxmcc/clone-combat">Play on Kongregate</a></span>
+
+            </div>
+
+            <div class="ui fluid card" id="watchcard">
+              <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <div class="ui inverted button">Add Friend</div>
+                      <div class="meta">
+                        <span class="date">Summer 2015</span>
+                      </div>
+                      <div class="description">
+                        UI Design
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <img src="images/covers/aoh-cover.png">
+              </div>
+            </div>
+
+            <div id="watchcard1" class="hider ui segment">
+
+    <a class='item allpjcts'><button class='circular teal ui icon button'><i class='icon left chevron'></i></button></a>
+
+              <h2 class="header">Mechanical Dreams</h2>
+              <p>I did not have a formal internship this past summer, so I had to create one from scratch. Using my deveoping interest in werables, I turned to the watchmaking industry to learn more about the history of mechanical timepieces and where they are headed as technological capabilites develop further.
+              </p>
+
+              <div class="ui medium rounded images">
+                <img class="ui medium image" src="images/samples/watch-login.png" alt="Login Wireframe">
+                <img class="ui medium image" src="images/samples/watch-sketches.jpg" alt="Gameplay Sketches">
+              </div>
+
+              <p>After networking at a wearables roundtable hosted at Aaron Faber gallery, I became the apprentice to a Manhattan watchmaker with 30+ years of experience at Tourneau, Rolex, and Tiffany & Co.
+              </p>
+              <p>Throughout the summer, I used the knowledge I was gaining from my apprenticeship to design an educational watchmaking game for Art of Horology, the only watchmaking school in Manhattan. I was responsible for overseeing the project, and designing the gameplay and the user interface.
+              </p>
+
+              <div class="ui medium rounded images">
+                <img class="ui medium image" src="images/samples/watch-wrong.png" alt="Gameplay Wireframe">
+                <img class="ui medium image" src="images/samples/watch-settings.png" alt="Settings Wireframe">
+              </div>
+              <!-- watchcard1 -->
+            </div>
+
+            <div class="card">
+              <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <a class="header" href="#">Gix Science</a>
+                      <div class="meta">
+                        <span class="date">Spring 2015</span>
+                      </div>
+                      <div class="description">
+                        UI for github style ipython research management.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <img src="images/covers/gix-cover.png">
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <a class="header" href="#">Belle Apps Delivery</a>
+                      <div class="meta">
+                        <span class="date">Fall 2014</span>
+                      </div>
+                      <div class="description">
+                        Front-end web design.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <img src="images/covers/belle-cover.png">
+              </div>
+            </div>
+
+
+            <div class="card">
+              <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <a class="header" href="#">Jesture</a>
+                      <div class="meta">
+                        <span class="date">Fall 2014</span>
+                      </div>
+                      <div class="description">
+                        Mobile app UI/UX design.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <img src="images/covers/jesture-cover.png">
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="blurring dimmable image">
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <a class="header" href="#">Augmate</a>
+                      <div class="meta">
+                        <span class="date">Summer 2014</span>
+                      </div>
+                      <div class="description">
+                        AR design for Google Glass.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <img src="images/covers/augmate-cover.png">
+              </div>
+            </div>
+            <!-- cards -->
           </div>
+          <!-- segment -->
         </div>
-      </div>
-      <img src="images/covers/clonecombat-cover.png">
-    </div>
-    <div class="extra content">
-      <span class="right floated">
-        <a href="http://www.newgrounds.com/portal/view/666197">Play on Newgrounds</a>
-      </span>
-    </div>
-  </div>
 
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui inverted button">Add Friend</div>
-            <a class="header" href="#">Mechanical Dreams</a>
-        <div class="meta">
-          <span class="date">Summer 2015</span>
-        </div>
-        <div class="description">
-          UI Design
-        </div>
+        <div name="designs" class="ui basic segment">
+
+          <h3 class="ui divider horizontal hidden">
+            <p>Graphic Designs</p>
+          </h3>
+
+          <!-- divider -->
+
+          <div class="ui equal width stackable grid">
+            <div class="column">
+              <img class="ui medium image left floated" src="images/dinos.png" alt="Geometric dionsaurs adapted from ">
+              <img class="ui medium image left floated" src="images/julieskitchen.png" alt="Logo design for seasonal kitchen">
+              <img class="ui medium image left floated" src="images/condom.png" alt="Condom design for ONE">
+              <img class="ui medium image left floated" src="images/balch.png">
+              <img class="ui medium image left floated" src="images/hotelapp.png">
+            </div>
+            <div class="column">
+              <img class="ui medium image left floated" src="images/bevclub.png">
+              <img class="ui medium image left floated" src="images/ccp-puzzle.png">
+              <img class="ui medium image left floated" src="images/soundspace.png">
+            </div>
+            <div class="column">
+              <img class="ui medium image left floated" src="images/duvv.png">
+              <img class="ui medium image left floated" src="images/ccp.png">
+
+            </div>
           </div>
-        </div>
-      </div>
-      <img src="images/covers/aoh-cover.png">
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <a class="header" href="#">Gix Science</a>
-        <div class="meta">
-          <span class="date">Spring 2015</span>
-        </div>
-        <div class="description">
-          UI for github style ipython research management.
-        </div>
-          </div>
-        </div>
-      </div>
-      <img src="images/covers/gix-cover.png">
-    </div>
-  </div>
-
-    <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <a class="header" href="#">Belle Apps Delivery</a>
-        <div class="meta">
-          <span class="date">Fall 2014</span>
-        </div>
-        <div class="description">
-          Front-end web design.
-        </div>
-          </div>
-        </div>
-      </div>
-      <img src="images/covers/belle-cover.png">
-    </div>
-  </div>
-
-
-    <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <a class="header" href="#">Jesture</a>
-        <div class="meta">
-          <span class="date">Fall 2014</span>
-        </div>
-        <div class="description">
-          Mobile app UI/UX design.
-        </div>
-          </div>
-        </div>
-      </div>
-      <img src="images/covers/jesture-cover.png">
-    </div>
-  </div>
-
-    <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <a class="header" href="#">Augmate</a>
-        <div class="meta">
-          <span class="date">Summer 2014</span>
-        </div>
-        <div class="description">
-          AR design for Google Glass.
-        </div>
-          </div>
-        </div>
-      </div>
-      <img src="images/covers/augmate-cover.png">
-    </div>
-  </div>
-<!-- cards -->
-</div>
-<!-- segment -->
-</div>
-
-<div name="designs" class="ui basic segment">
-
-<h3 class="ui horizontal hidden divider">
-    <p>Graphic Designs</p>
-  </h3>
-
-<!-- divider -->
-
-<div class="ui equal width stackable grid">
-  <div class="column">
-    <img class="ui medium image" src="images/dinos.png" alt="Geometric dionsaurs adapted from ">
-    <img class="ui medium image" src="images/julieskitchen.png" alt="Logo design for seasonal kitchen">
-    <img class="ui medium image" src="images/condom.png" alt="Condom design for ONE">
-    <img class="ui medium image" src="images/balch.png">
-    <img class="ui medium image" src="images/hotelapp.png">
-  </div>
-  <div class="column">
-    <img class="ui medium image" src="images/bevclub.png">
-    <img class="ui medium image" src="images/ccp-puzzle.png">
-    <img class="ui medium image" src="images/soundspace.png">
-  </div>
-  <div class="column">
-    <img class="ui medium image" src="images/duvv.png">
-    <img class="ui medium image" src="images/ccp.png">
-
-  </div>
-</div>
 
 <!-- <div id="modal-jk" class="ui modal">
   <div id="modalHeader" class="header">
@@ -260,12 +288,12 @@
 <div class="ui small modal">
   <div class="header">
     <button id="closeButton" class="ui circular basic right floated icon button">
-  <i class="close icon"></i>
-</button>
+      <i class="close icon"></i>
+    </button>
     <p id="modalHeader">Hello?</p>
   </div>
   <div class="content">
-      <img id="modalImage" class="image mod" src="images/julieskitchen.png">
+    <img id="modalImage" class="image mod" src="images/julieskitchen.png">
   </div>
 </div>
 
