Delete php files. Add jesture images.

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                </div>
 
                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    thorough and informed
-                  </div>
+                <i class="angle right icon"></i>
+                <div class="content">
+                  thorough and informed
                 </div>
+              </div>
 
-               <div class="item">
+              <div class="item">
                 <i class="asterisk icon"></i>
                 <div class="content">
                   generate ideas
@@ -97,46 +97,46 @@
             <div class="ui list">
 
               <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    communicate ideas
-                  </div>
+                <i class="angle right icon"></i>
+                <div class="content">
+                  communicate ideas
                 </div>
-
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    always an asset
-                  </div>
-                </div>
+              </div>
 
               <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    mediate conflicts
-                  </div>
+                <i class="angle right icon"></i>
+                <div class="content">
+                  always an asset
                 </div>
+              </div>
 
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    communicate between stakeholders
-                  </div>
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  mediate conflicts
                 </div>
+              </div>
 
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    honest & adaptable
-                  </div>
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  communicate between stakeholders
                 </div>
+              </div>
 
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    not afraid of uncertainty
-                  </div>
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  honest & adaptable
                 </div>
+              </div>
+
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  not afraid of uncertainty
+                </div>
+              </div>
 
             </div>
           </div>
@@ -145,32 +145,32 @@
             <div class="ui list">
 
               <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    sweat the details
-                  </div>
+                <i class="angle right icon"></i>
+                <div class="content">
+                  sweat the details
                 </div>
+              </div>
 
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    take initiative
-                  </div>
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  take initiative
                 </div>
+              </div>
 
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    integrate knowledge
-                  </div>
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  integrate knowledge
                 </div>
+              </div>
 
-                <div class="item">
-                  <i class="angle right icon"></i>
-                  <div class="content">
-                    go the extra mile
-                  </div>
+              <div class="item">
+                <i class="angle right icon"></i>
+                <div class="content">
+                  go the extra mile
                 </div>
+              </div>
 
             </div>
 
@@ -191,7 +191,7 @@
 <div class="ui grid container" id="container">
   <!-- container -->
 
-  <div class="three wide column" id="leftSide">
+  <div class="four wide column" id="leftSide">
     <div class="ui basic sticky segment" id="sdBr">
       <h1>Valerie</h1>
       <h1>Denay</h1>
@@ -206,7 +206,8 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div class="thirteen wide column" id="mnCntnt">
+    <div class="twelve wide column" id="mnCntnt">
+
       <div id="FUCKWIT" name="projects" class="ui basic segment">
 
         <!-- divider -->
@@ -217,10 +218,21 @@
         <!-- CARDS -->
 
         <a href="#clonecard1" class="ui centered fluid card" id="clonecard">
-          <div class="ui teal corner label">
-        <i class="heart icon"></i>
-      </div>
+          <div class="blurring dimmable image">
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="meta">
+                    <span class="date">Fall 2014</span>
+                  </div>
+                  <div class="description">
+                    Front-end web design.
+                  </div>
+                </div>
+              </div>
+            </div>
             <img src="images/covers/clonecombat-cover.png">
+          </div>
         </a>
 
         <div id="clonecard1" class="hider ui segment">
@@ -247,9 +259,6 @@
         </div>
 
         <a href="#watchcard1" class="ui centered fluid card" id="watchcard">
-          <div class="ui teal corner label">
-        <i class="heart icon"></i>
-      </div>
           <div class="blurring dimmable image">
             <div class="ui dimmer">
               <div class="content">
@@ -389,11 +398,8 @@
             <div class="ui dimmer">
               <div class="content">
                 <div class="center">
-                  <div class="meta">
-                    <span class="date">Fall 2014</span>
-                  </div>
                   <div class="description">
-                    Mobile app UI/UX design.
+                    Mobile app UX research & design.
                   </div>
                 </div>
               </div>
@@ -411,20 +417,28 @@
 
           <h2 class="header">Jesture</h2>
 
+          <div class="meta">
+                    <span class="date">Fall 2014</span>
+                  </div>
+
           <p>Jesture is an app concept that I designed for my Human Computer Interaction Class.
           </p>
 
-          <div class="ui medium rounded images">
-            <a><img class="ui medium image" src="images/samples/gix-dashboard.png" alt="Dashboard Mockup"></a>
-            <img class="ui medium image" src="images/samples/gix-home.png" alt="Home Page Mockup">
-          </div>
-
           <p>
+            <a href="documents/JestureFinalReport.pdf" target="_blank">
+              <button class="ui button">View Full Report</button>
+            </a>
           </p>
 
           <div class="ui medium rounded images">
-            <img class="ui medium image" src="images/samples/gix-session.png" alt="Session Mockup">
-            <img class="ui medium image" src="images/samples/gix-profile.png" alt="Profile Mockup">
+            <a><img class="ui medium image" src="images/samples/jesture-about.png" alt="Menu Mockup"></a>
+            <img class="ui medium image" src="images/samples/jesture-causes.png" alt="About Mockup">
+            <img class="ui medium image" src="images/samples/jesture-challenge.png" alt="Challenge Mockup">
+          </div>
+
+          <div class="ui medium rounded images">
+            <img class="ui medium image" src="images/samples/jesture-h20.png" alt="Cause Page Mockup">
+            <img class="ui medium image" src="images/samples/jesture-profile.png" alt="Profile Mockup">
           </div>
           <!-- jesturecard1 -->
         </div>
@@ -457,7 +471,9 @@
 
           <h2 class="header">Augmate</h2>
 
-          <p>I was fortunate enough to be an intern at the wearable device startup, Augmate.
+          <p>I was fortunate enough to be a UX intern for the wearable tech startup Augmate, through the Grand Central Tech accelerator. I created various forms of visual documentaiton for the company and their clients, including use case flow diagrams and mockups of their warehouse application for Google Glass.
+
+            In addition to helping develop their design team, I had an active role in faciliating communication between members of the engineering, business, and design teams.
           </p>
 
           <div class="ui medium rounded images">
@@ -478,6 +494,7 @@
         <!-- segment -->
       </div>
 
+
       <div name="designs" class="ui basic segment">
 
         <h3 class="ui divider horizontal hidden">
@@ -491,12 +508,10 @@
             <img class="ui medium image left floated" src="images/dinos.png" alt="Geometric dionsaurs adapted from ">
             <img class="ui medium image left floated" src="images/julieskitchen.png" alt="Logo design for seasonal kitchen">
             <img class="ui medium image left floated" src="images/condom.png" alt="Condom design for ONE">
-            <img class="ui medium image left floated" src="images/balch.png">
             <img class="ui medium image left floated" src="images/hotelapp.png">
           </div>
           <div class="column">
             <img class="ui medium image left floated" src="images/bevclub.png">
-            <img class="ui medium image left floated" src="images/ccp-puzzle.png">
             <img class="ui medium image left floated" src="images/soundspace.png">
           </div>
           <div class="column">
