Update icons, buttons, and content format.

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <!-- mobile -->
   <div class="ui basic segment">
     <button id="bttn" class="massive circular ui icon black button">
-      <i class="list icon"></i>
+      <i class="sidebar icon"></i>
     </button>
   </div>
 
   <!-- ABOUT -->
   <div id="precontainer" class="ui container">
 
-    <div id="about" class="ui masthead basic inverted segment">
-      <div class="ui sizer vertical basic inverted segment">
+    <div id="about" class="ui masthead basic segment">
+      <div class="ui sizer vertical basic segment">
 
         <div class="center"> <h1>Valerie Denay Mack</h1> </div>
 
@@ -222,12 +222,12 @@
             <div class="ui dimmer">
               <div class="content">
                 <div class="center">
-                  <div class="meta">
-                    <span class="date">Fall 2014</span>
-                  </div>
                   <div class="description">
-                    Front-end web design.
+                    Game design
                   </div>
+                  <p>
+                    <i class="circular icon plus"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -237,25 +237,36 @@
 
         <div id="clonecard1" class="hider ui segment">
           <a class='item allpjcts'>
-            <button class='circular teal ui icon button'>
+            <button class='circular basic ui icon button'>
               <i class='icon left chevron'></i>
             </button>
           </a>
           <h2 class="header">Clone Combat</h2>
-          <img class="ui medium right floated image" src="images/samples/level22.png" alt="Kongregate Level 22">
-          <p>Clone Combat is a game that my team and I created for our Analytics-Driven Game Design class. I came up with the concept for this puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time. We successfully executed our ideas, creating three iterative versions that improved over time.</p>
-          <img class="ui medium right floated image" src="images/samples/engagement.png" alt="Burndown Chart">
-          <p>My primary roles were user interface and user experience designer.</p>
-          <p>Our data analysis showed that our greatest design challenge was learnability, so I created comprehensive tutorial levels to increase player engagement.</p>
-          <img class="ui medium right floated image" src="images/samples/tutoriallevel.png" alt="Conduction Tutorial Level">
-          <p>Clone Combat was one of the most successful games produced from our class. It was featured on Newgrounds and received a 3.5 / 5 rating and over 20,000 plays in the first week. With a tougher audience on Kongregate, we received a 3.1 / 5 star rating.</p>
-          <img class="ui medium right floated image" src="images/samples/newgrounds.png" alt="Newgrounds Results">
+
           <span class="left floated">
             <a href="http://www.newgrounds.com/portal/view/666197">Play on Newgrounds</a>
           </span> | 
           <span class="left floated">
             <a href="http://www.kongregate.com/games/maxxmcc/clone-combat">Play on Kongregate</a>
           </span>
+
+          <p>Clone Combat is a game that my team and I created for our Analytics-Driven Game Design class. I came up with the concept for this puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time. We successfully executed our ideas, creating three iterative versions that improved over time.</p>
+
+          <div class="ui medium rounded images">
+            <img class="ui medium image" src="images/samples/level22.png" alt="Kongregate Level 22">
+            <img class="ui medium image" src="images/samples/engagement.png" alt="Burndown Chart">
+          </div>
+
+          <p>My primary roles were user interface and user experience designer.</p>
+          <p>Our data analysis showed that our greatest design challenge was learnability, so I created comprehensive tutorial levels to increase player engagement.</p>
+
+          <p>Clone Combat was one of the most successful games produced from our class. It was featured on Newgrounds and received a 3.5 / 5 rating and over 20,000 plays in the first week. With a tougher audience on Kongregate, we received a 3.1 / 5 star rating.</p>
+
+          <div class="ui medium rounded images">
+            <img class="ui medium image" src="images/samples/tutoriallevel.png" alt="Conduction Tutorial Level">
+            <img class="ui medium image" src="images/samples/newgrounds.png" alt="Newgrounds Results">
+          </div>
+
         </div>
 
         <a href="#watchcard1" class="ui centered fluid card" id="watchcard">
@@ -264,9 +275,11 @@
               <div class="content">
                 <div class="center">
                   <div class="description">
-                    UI Design
+                    UI & game design
                   </div>
-                  <div class="ui inverted button">Learn more</div>
+                  <p>
+                    <i class="icon plus"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -276,7 +289,7 @@
 
         <div id="watchcard1" class="hider ui segment">
           <a class='item allpjcts'>
-            <button class='circular teal ui icon button'>
+            <button class='circular basic ui icon button'>
               <i class='icon left chevron'></i>
             </button>
           </a>
@@ -308,12 +321,12 @@
             <div class="ui dimmer">
               <div class="content">
                 <div class="center">
-                  <div class="meta">
-                    <span class="date">Spring 2015</span>
-                  </div>
                   <div class="description">
-                    UI for github style ipython research management.
+                    UI design
                   </div>
+                  <p>
+                    <i class="icon plus"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -323,7 +336,7 @@
 
         <div id="gixcard1" class="hider ui segment">
           <a class='item allpjcts'>
-            <button class='circular teal ui icon button'>
+            <button class='circular basic ui icon button'>
               <i class='icon left chevron'></i>
             </button>
           </a>
@@ -355,12 +368,12 @@
             <div class="ui dimmer">
               <div class="content">
                 <div class="center">
-                  <div class="meta">
-                    <span class="date">Fall 2014</span>
-                  </div>
                   <div class="description">
-                    Front-end web design.
+                    Web design
                   </div>
+                  <p>
+                    <i class="icon plus"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -370,7 +383,7 @@
 
         <div id="bellecard1" class="hider ui segment">
           <a class='item allpjcts'>
-            <button class='circular teal ui icon button'>
+            <button class='circular basic ui icon button'>
               <i class='reply icon'></i>
             </button>
           </a>
@@ -399,8 +412,11 @@
               <div class="content">
                 <div class="center">
                   <div class="description">
-                    Mobile app UX research & design.
+                    UX research & design
                   </div>
+                  <p>
+                    <i class="icon plus"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -410,35 +426,27 @@
 
         <div id="jesturecard1" class="hider ui segment">
           <a class='item allpjcts'>
-            <button class='circular teal ui icon button'>
+            <button class='circular basic ui icon button'>
               <i class='icon left chevron'></i>
             </button>
           </a>
 
           <h2 class="header">Jesture</h2>
 
-          <div class="meta">
-                    <span class="date">Fall 2014</span>
-                  </div>
+          <span class="left floated">
+            <a href="documents/JestureFinalReport.pdf" target="_blank">View Full Report</a>
+          </span>
 
-          <p>Jesture is an app concept that I designed for my Human Computer Interaction Class.
-          </p>
-
-          <p>
-            <a href="documents/JestureFinalReport.pdf" target="_blank">
-              <button class="ui button">View Full Report</button>
-            </a>
+          <p>Jesture is an app concept that I created and designed for my Human Computer Interaction Class.
           </p>
 
           <div class="ui medium rounded images">
-            <a><img class="ui medium image" src="images/samples/jesture-about.png" alt="Menu Mockup"></a>
-            <img class="ui medium image" src="images/samples/jesture-causes.png" alt="About Mockup">
-            <img class="ui medium image" src="images/samples/jesture-challenge.png" alt="Challenge Mockup">
+            <a><img class="ui medium image other" src="images/samples/jesture-about.png" alt="About Mockup"></a>
+            <img class="ui medium image other" src="images/samples/jesture-h20.png" alt="Cause Page Mockup">
           </div>
 
-          <div class="ui medium rounded images">
-            <img class="ui medium image" src="images/samples/jesture-h20.png" alt="Cause Page Mockup">
-            <img class="ui medium image" src="images/samples/jesture-profile.png" alt="Profile Mockup">
+          <div class="ui huge rounded images">
+            <img class="ui huge image" src="images/samples/jesture-finalposter.png" alt="Final Poster">
           </div>
           <!-- jesturecard1 -->
         </div>
@@ -448,12 +456,12 @@
             <div class="ui dimmer">
               <div class="content">
                 <div class="center">
-                  <div class="meta">
-                    <span class="date">Summer 2014</span>
-                  </div>
                   <div class="description">
-                    AR design for Google Glass.
+                    UX research & design
                   </div>
+                  <p>
+                    <i class="icon plus"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -464,7 +472,7 @@
         <div id="augmatecard1" class="hider ui segment">
 
           <a class='item allpjcts'>
-            <button class='circular teal ui icon button'>
+            <button class='circular basic ui icon button'>
               <i class='icon left chevron'></i>
             </button>
           </a>
