Test jesture poster medium

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
           </div>
 
           <div class="ui huge rounded images">
-            <img class="ui huge image" src="images/samples/jesture-finalposter.png" alt="Final Poster">
+            <img class="ui medium image" src="images/samples/jesture-finalposter.png" alt="Final Poster">
           </div>
           <!-- jesturecard1 -->
         </div>
